# codemodpydanticv1

./: .pre-commit  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml
codemodpydanticv1/: __init__.py  cli.py  codemodpydanticv1.py
tests/: test_cases.yml  test_cases_flatten_imports.yml  test_codemodpydanticv1.py
