[project]
requires-python = ">=3.10"

[tool.poetry]
name = "codemodpydanticv1"
version = "0.1.14"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
libcst = "^1.1.0"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pydantic = "^2.4.2"
pyyaml = "^6.0.1"
black = "^23.10.0"
ruff = "^0.1.1"
types-pyyaml = "^6.0.12.12"

[tool.poetry.scripts]
codemodpydanticv1 = "codemodpydanticv1.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I", "UP"]
